--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,6 @@
 .ms_banner {
     width: 100%;
     background-color: #1B72E8;
-    
-    /* debug */
     height: 200px;
 } 
 
@@ -44,4 +42,25 @@
     height: calc(100% - 200px);
     overflow-y: auto;
     background-color: blueviolet;
+}
+
+/* [RESPONSIVE] */
+
+@media screen and (min-width: 768px) {
+       
+        .ms_banner {
+            height: 150px;
+        }
+
+        .ms_content {
+            height: calc(100% - 150px);
+        }
+}
+
+@media screen and (min-width: 992px) {
+
+        .ms_sidebar {
+            width: 150px;
+        }
+
 }
